Fix 4074 - Align tabs to the bottom of the editor header

--- a/src/components/Editor/Editor.css
+++ b/src/components/Editor/Editor.css
@@ -40,7 +40,7 @@
   position: absolute;
   height: calc(100% - 31px);
   width: calc(100% - 1.5px);
-  top: 30px;
+  top: 29px;
   left: 0px;
   --editor-footer-height: 24px;
 }
